syntax = "proto3";

option csharp_namespace = "UserService";

service UserGrpc {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
}

message CreateUserResponse {
  bool success = 1;
}